--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,6 +8,19 @@
     tools:context=".ForgotPasswordActivity">
 
     <Button
+        android:id="@+id/button8"
+        android:layout_width="224dp"
+        android:layout_height="50dp"
+        android:text="Back to Log In"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.696" />
+
+    <Button
         android:id="@+id/button7"
         android:layout_width="224dp"
         android:layout_height="50dp"
