table in lost details and found details

--- a/app/src/main/res/layout/activity_found_details.xml
+++ b/app/src/main/res/layout/activity_found_details.xml
@@ -5,6 +5,297 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FoundDetailsActivity">
+    tools:context=".LostDetailsActivity">
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tableLostDetails"
+        app:layout_constraintVertical_bias="0.982">
+
+        <RadioButton
+            android:id="@+id/radioClaimed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="16dp"
+            android:scaleX="0.9"
+            android:scaleY="0.9"
+            android:text="Found"
+            android:textColor="#000000"
+            android:textSize="13sp" />
+
+        <RadioButton
+            android:id="@+id/radioUnlaimed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="0.9"
+            android:scaleY="0.9"
+            android:text="Unclaimed"
+            android:textColor="#000000"
+            android:textSize="13sp" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="284dp"
+        android:layout_height="35dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Found Item Details"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.168" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="417dp"
+        android:layout_height="101dp"
+        android:layout_marginBottom="5dp"
+        android:background="#e7dedc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="44dp"
+        android:layout_height="85dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/bataan_peninsula_state_university_logo" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="279dp"
+        android:layout_height="28dp"
+        android:fontFamily="@font/times_new_roman"
+        android:text="Bataan Peninsula State University"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.045" />
+
+    <Spinner
+        android:id="@+id/spinner3"
+        android:layout_width="98dp"
+        android:layout_height="55dp"
+        android:scrollbarSize="4dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
+
+    <!-- Lost Item Details Table -->
+    <TableLayout
+        android:id="@+id/tableLostDetails"
+        android:layout_width="388dp"
+        android:layout_height="247dp"
+        android:layout_marginTop="24dp"
+        android:background="#000000"
+        android:padding="0.5dp"
+        android:stretchColumns="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView18"
+        app:layout_constraintVertical_bias="0.441">
+
+        <!-- Rows 1–7 same as before -->
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Item Name:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvItemName"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Description:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvDescription"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Category:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvCategory"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Owner:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvOwner"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Contact Number:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvContact"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Date of Loss:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvDateLoss"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Location of Loss:"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvLocationLoss"
+                android:background="@drawable/cell_border"
+                android:padding="8dp" />
+        </TableRow>
+
+    </TableLayout>
+
+    <!-- 🟣 NEW SECTION: "Claims" header and 3-column table -->
+
+    <TextView
+        android:id="@+id/textViewClaimsHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:text="Claims"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.815" />
+
+    <TableLayout
+        android:id="@+id/tableClaims"
+        android:layout_width="388dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="#000000"
+        android:padding="0.5dp"
+        android:stretchColumns="*"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewClaimsHeader"
+        app:layout_constraintVertical_bias="0.0">
+
+        <!-- Header Row -->
+        <TableRow>
+
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Claimant"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Status"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+
+            <TextView
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:text="Submission Date"
+                android:textColor="#000000"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <!-- Data Row -->
+        <TableRow>
+
+            <TextView
+                android:id="@+id/tvClaimant"
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/tvStatus"
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/tvSubmissionDate"
+                android:background="@drawable/cell_border"
+                android:padding="8dp"
+                android:textColor="#000000" />
+        </TableRow>
+    </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
