--- a/app/src/main/res/layout/activity_found_report.xml
+++ b/app/src/main/res/layout/activity_found_report.xml
@@ -7,4 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".FoundReportActivity">
 
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="224dp"
+        android:layout_height="50dp"
+        android:text="Report Found Item"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.932" />
 </androidx.constraintlayout.widget.ConstraintLayout>
