--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,6 +11,7 @@
         android:id="@+id/button8"
         android:layout_width="224dp"
         android:layout_height="50dp"
+        android:backgroundTint="#940202"
         android:text="Back to Log In"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,6 +25,7 @@
         android:id="@+id/button7"
         android:layout_width="224dp"
         android:layout_height="50dp"
+        android:backgroundTint="#940202"
         android:text="Forgot Password"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
