--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,7 @@
         android:id="@+id/button4"
         android:layout_width="224dp"
         android:layout_height="50dp"
+        android:backgroundTint="#940202"
         android:text="SIGN IN"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
