--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:id="@+id/textView"
         android:layout_width="346dp"
         android:layout_height="138dp"
+        android:fontFamily="@font/times_new_roman"
         android:gravity="center"
         android:text="Lost and Found Online System"
         android:textColor="#373636"
