--- a/app/src/main/res/layout/activity_report_item.xml
+++ b/app/src/main/res/layout/activity_report_item.xml
@@ -57,7 +57,7 @@
         android:layout_width="417dp"
         android:layout_height="101dp"
         android:layout_marginBottom="5dp"
-        android:background="#e7dedc"
+        android:background="#A00606"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
@@ -83,7 +83,7 @@
         android:layout_height="28dp"
         android:fontFamily="@font/times_new_roman"
         android:text="Bataan Peninsula State University"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
