--- a/app/src/main/res/layout/activity_item_found_frame.xml
+++ b/app/src/main/res/layout/activity_item_found_frame.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_margin="8dp"
     app:cardCornerRadius="0dp"
     app:cardElevation="0dp"
