--- a/app/src/main/res/layout/activity_matching_result_lost_frame.xml
+++ b/app/src/main/res/layout/activity_matching_result_lost_frame.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MatchingResultsActivity">
+    tools:context=".MatchingResultLostFrame">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
