--- a/app/src/main/res/layout/activity_lost_details.xml
+++ b/app/src/main/res/layout/activity_lost_details.xml
@@ -30,7 +30,6 @@
         android:background="#A00606"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -60,19 +59,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.045" />
-
-    <Spinner
-        android:id="@+id/spinnerFilter"
-        android:layout_width="98dp"
-        android:layout_height="55dp"
-        android:scrollbarSize="4dp"
-        android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.996"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
 
     <!-- Lost Item Details Table -->
     <TableLayout
@@ -231,5 +217,16 @@
             android:textColor="#000000"
             android:textSize="13sp" />
     </RadioGroup>
+
+    <Spinner
+        android:id="@+id/spinner8"
+        android:layout_width="86dp"
+        android:layout_height="29dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.045" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
